cambios para adaptacion a tablet: "Unicamente corrección de visión"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         <screen android:screenSize="normal" android:screenDensity="hdpi" />
         <screen android:screenSize="normal" android:screenDensity="xhdpi" />
     </compatible-screens>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk
+        android:minSdkVersion="9"
+        android:maxSdkVersion="23">
 
+    </uses-sdk>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
