--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,22 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-23
+    
+  licenses:
+  - 'android-sdk-license-.+'
+env:
+  global:
+   # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
 
+# Emulator Management: Create, Start and Wait
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  
+script:
+  - android list target
 before_install:
   - chmod +x gradlew
