--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,35 @@
-language: android
-android:
-  components:
+    android: 
+  components: 
     - tools
     - platform-tools
     - build-tools-23.0.1
     - android-23
-    - extra-google-google_play_services
-    - extra-google-m2repository
     - extra-android-m2repository
-    - addon-google_apis-google-23
-    
-  licenses:
-  - 'android-sdk-license-.+'
-env:
-  global:
-   # install timeout in minutes (2 minutes by default)
-    - ADB_INSTALL_TIMEOUT=8
-
-# Emulator Management: Create, Start and Wait
-before_script:
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+    - extra-android-support
+    - sys-img-armeabi-v7a-android-22
+    - extra-google-google_play_services
+  licenses: 
+    - android-sdk-preview-license-52d11cd2
+    - android-sdk-license-.+
+    - google-gdk-license-.+
+before_script: 
+  - "android update sdk --no-ui --filter build-tools-24.0.1,android-24,extra-android-m2repository"
+  - "echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a"
+  - "emulator -avd test -no-skin -no-audio -no-window &"
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
-  
-script:
-  - android list target
-before_install:
-  - chmod +x gradlew
+  - "adb shell input keyevent 82 &"
+before_cache: 
+  - "rm -f $HOME/.gradle/caches/modules-2/modules-2.lock"
+before_install: 
+  - "chmod +x gradlew"
+cache: 
+  directories: 
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+env: 
+  matrix: 
+    - "ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a"
+jdk: oraclejdk8
+language: android
+script: 
+  - "./gradlew build connectedCheck --stacktrace"
