--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,24 @@
 language: android
 android:
-components:
-  - tools
-  - platform-tools
-  - build-tools-23.0.1
-  - android-23
-  - extra-google-google_play_services
-  - extra-google-m2repository
-  - extra-android-m2repository
-  - addon-google_apis-google-23
+  components:
+    - tools
+    - platform-tools
+    - build-tools-23.0.3
+    - android-23
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-23
+
+  before_install:
+    - chmod +x gradlew
     
   licenses:
-  - 'android-sdk-license-.+'
- env:
-  global:
-  # install timeout in minutes (2 minutes by default)
-  - ADB_INSTALL_TIMEOUT=8
+    - 'android-sdk-license-.+'
+  env:
+    global:
+    # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
  # Emulator Management: Create, Start and Wait
  before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
