--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,6 @@ before_script:
 script:
   - android list target
   - ./gradlew build connectedCheck
+  - ./gradlew build connectedAndroidTest
 before_install:
   - chmod +x gradlew
