--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,6 @@ script:
   - android list target
   - ./gradlew build connectedCheck
   - ./gradlew build connectedAndroidTest
+  - ./gradlew clean test
 before_install:
   - chmod +x gradlew
